@@ -23,6 +23,7 @@ version <next>:
 - RTP depacketization of QDM2
 - ANSI/ASCII art playback system
 - Lego Mindstorms RSO de/muxer
+- libavcore added
 
 
 
